# karma

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  ONBOARDING.md  README.md  pyproject.toml  test_parallel.py  test_tx.py
.github/workflows/: ci.yml
docs/: governance.md
karma/: README.md  __init__.py  cli.py  context_optimizer.py  mcp_server.py  orchestrator.py  prompt_engine.py  turn_kernel.py
karma/core/: cache.py  context_optimizer.py  context_snapshot.py  evidence.py  falsification_gate.py  knowledge_graph.py  memory.py  memory_core.py  persistence.py  prompt_variant_store.py
karma/domains/: MANIFEST.json  loader.py  schema.json
karma/domains/core/: architecture.json  (+4 more)
karma/experimental_runtime/: ctl.py  memory_bus.py  orchestrator.py  prompt_engine.py  staleness_check.py  team_spawn.py
karma/middleware/: AGENT_FORMATS.json
karma/ml/: experience_store.py  knowledge_graph.py  needs_engine.py  pattern_learner.py  replay_engine.py  reward_model.py  self_improvement.py  training_loop.py
karma/runtime/: context_optimizer.py  falsification_gate.py  memory_core.py  migrate_skills.py  outcome_middleware.py  prompt_engine.py  skill_registry.py  team_spawn.py
karma/skills/: creator.py  loader.py  registry.py
karma/tests/: test_architecture.py  test_cli.py  test_concurrency.py  test_falsification_gate_meta.py  test_knowledge_graph.py  test_memory_bus.py  test_migration_sentinel.py  test_ml_kernel.py  test_orchestrator.py  test_project_factory.py
llm_middleware/: README.md  cli.py  context_optimizer.py  orchestrator.py  prompt_engine.py
llm_middleware/bus/: __init__.py  event_bus.py
llm_middleware/core/: __init__.py  context_optimizer.py  context_snapshot.py  falsification_gate.py  index.py  knowledge_graph.py  memory.py  memory_core.py  persistence.py  prompt_variant_store.py
llm_middleware/ml/: __init__.py  experience_store.py  knowledge_graph.py  needs_engine.py  pattern_learner.py  replay_engine.py  reward_model.py  self_improvement.py  training_loop.py
llm_middleware/runtime/: __init__.py  context_optimizer.py  ctl.py  falsification_gate.py  memory_bus.py  memory_core.py  orchestrator.py  outcome_middleware.py  platform_adapter.py  prompt_engine.py  skill_registry.py  team_spawn.py
llm_middleware/skills/: __init__.py  registry.py
llm_middleware/tests/: test_falsification_gate_meta.py  test_knowledge_graph.py  test_memory_bus.py  test_migration_sentinel.py  test_ml_kernel.py  test_project_factory.py
(+59 files in other folders)
