[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-middleware"
version = "0.3.0"
description = "LLM Middleware Runtime - Agent-agnostic context orchestration for any project"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
ml = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]

[project.scripts]
llm-mw = "llm_middleware.cli:cli"

[tool.setuptools]
packages = [
    "llm_middleware",
    "llm_middleware.core",
    "llm_middleware.runtime",
    "llm_middleware.skills",
    "llm_middleware.ml",
    "llm_middleware.bus",
    "llm_middleware.agents",
    "llm_middleware.plugins",
]

[tool.ruff]
line-length = 100
target-version = "py314"
lint.select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "T20"]
lint.ignore = ["S101", "T201", "T203"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = [
    "llm_middleware/tests",
]
python_files = "test_*.py"
